# polis

./: .coveragerc  .dockerignore  .gitignore  Makefile  README.md  appspec-euro.yml  appspec.yaml  appspec.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  example.env  package-lock.json  run_reset_processing_jobs.sh  test.env
cdk/: README.md  (+14 more)
delphi/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  RUNNING_THE_SYSTEM.md  S3_STORAGE.md  config.yaml  configure_instance.py  coverage.xml  create_dynamodb_tables.py  create_topic_agenda_table.py  delphi  direct_pca_test.py  docker-compose.yml  docker-compose.yml.bak  example.env  final_demo.py  generate_coverage_md.py  pyproject.toml  requirements.txt  reset_conversation.sh  reset_database.sh  run_delphi.py  run_delphi.sh  setup_minio.py  setup_minio_bucket.py  simple_demo.py  start_poller.sh  test_minio_access.py
delphi/docs/: ANTHROPIC_BATCH_API_GUIDE.md  BATCH_API_BUGFIX.md  CLI_STATUS_COMMAND.md  DATABASE_NAMING_PROPOSAL.md  DATA_FORMAT_STANDARDS.md  DELPHI_AUTOSCALING_SETUP.md  DELPHI_DOCKER.md  DELPHI_JOB_SYSTEM_TROUBLESHOOTING.md  DISTRIBUTED_SYSTEM_ROADMAP.md  DOCKER.md  DOCKER_BUILD_OPTIMIZATION.md  DOCUMENTATION_DIRECTORY.md  EVOC_LAYER_HIERARCHY_DEBUG.md  GLOBAL_SECTION_TEMPLATE_MAPPING_FIX.md  JOB_QUEUE_SCHEMA.md  NARRATIVE_DROPDOWN_DESIGN_ANALYSIS.md  NARRATIVE_INVERSION_INVESTIGATION.md  OLLAMA_MODEL_CONFIG.md  QUICK_START.md  RUNNING_THE_SYSTEM.md  S3_STORAGE.md  SIMPLIFIED_TESTS.md  SPATIAL_TOPIC_PRIORITIZATION_SYSTEM.md  TESTING_LOG.md  TOPIC_AGENDA_IMPLEMENTATION_SUMMARY.md  TOPIC_AGENDA_MIGRATION_PLAN.md  TOPIC_AGENDA_STORAGE_DESIGN.md  TOPIC_GROUP_CONSENSUS_METRIC.md  TOPIC_GROUP_CONSENSUS_METRIC_REVISED.md  TOPIC_GROUP_CONSENSUS_o3_stub.MD  TOPIC_NAMING.md  UMAP_VISUALIZATION_PLAN.md  ZID_EXPOSURE_AUDIT.md  algorithm_analysis.md  conversion_plan.md  project_structure.md  summary.md  topic-moderation-system.md  usage_examples.md
delphi/eda_notebooks/: biodiversity_analysis.ipynb  run_analysis.py  vw_analysis.ipynb
delphi/gpu_accelerated/: data_loader.py
delphi/lambda/: README.md  biodiversity_lambda.py  requirements.txt
delphi/notebooks/: README.md  biodiversity_analysis.ipynb  launch_notebook.sh  run_analysis.py  vw_analysis.ipynb
delphi/polismath/: poller.py  run_math_pipeline.py
delphi/polismath/conversation/: conversation.py
delphi/polismath/database/: dynamodb.py  postgres.py
delphi/polismath/pca_kmeans_rep/: __init__.py  clusters.py  corr.py  named_matrix.py  pca.py  repness.py  stats.py
delphi/polismath/regression/: __init__.py  comparer.py  datasets.py  recorder.py  utils.py
delphi/polismath/utils/: general.py
delphi/real_data/r4tykwac8thvzv35jrn53/: 2025-11-11-1704-r4tykwac8thvzv35jrn53-summary.csv  2025-11-11-1704-r4tykwac8thvzv35jrn53-votes.csv
delphi/real_data/r4tykwac8thvzv35jrn53-biodiversity/: 2025-11-11-1704-r4tykwac8thvzv35jrn53-comments.csv  golden_snapshot.json  r4tykwac8thvzv35jrn53_math_blob.json
delphi/real_data/r6vbnhffkxbd7ifmfbdrd-vw/: 2025-11-11-1704-r6vbnhffkxbd7ifmfbdrd-comments.csv  2025-11-11-1704-r6vbnhffkxbd7ifmfbdrd-summary.csv  golden_snapshot.json
delphi/scripts/: compare_implementations.py  delphi_cli.py  job_poller.py  participation_timeline.py  regression_comparer.py  regression_download.py  regression_recorder.py  reset_processing_jobs.py  stop_batch_check_cycle.py
delphi/tests/: README.md  TEST_MAP.md  common_utils.py  compare_with_clojure.py  conftest.py  conversation_profiler.py  coverage.xml  dataset_config.py  direct_conversation_test.py  direct_repness_test.py  download_real_data.py  full_pipeline_test.py  legacy_compare_with_clojure.py  profile_postgres_data.py  run_math_pipeline_test.py  run_system_test.py  run_tests.py  simplified_repness_test.py  simplified_test.py  test_batch_id.py  test_clojure_output.py  test_clusters.py  test_conversation.py  test_conversation_smoke.py  test_corr.py  test_datasets.py  test_edge_cases.py  test_golden_data.py  test_legacy_clojure_output.py  test_legacy_clojure_regression.py  test_legacy_repness_comparison.py  test_minio_access.py  test_named_matrix.py  test_pakistan_conversation.py  test_pca.py  test_pca_edge_cases.py  test_pca_real_data.py  test_pca_smoke.py  test_pca_unit.py  test_pipeline_integrity.py  (+11 more)
delphi/umap_narrative/: 500_generate_embedding_umap_cluster.py  501_calculate_comment_extremity.py  502_calculate_priorities.py  600_generate_llm_topic_names.py  700_datamapplot_for_layer.py  701_static_datamapplot_for_layer.py  702_CONSENSUS_DIVISIVE_README.md  702_consensus_divisive_datamapplot.py  800_report_topic_clusters.py  801_narrative_report_batch.py  801_narrative_report_batch.py.bak  802_process_batch_results.py  803_check_batch_status.py  BATCH_NARRATIVE_README.md  QUICKSTART.md  README.md  create_dynamodb_tables.py  requirements.txt  reset_conversation.py  run_pipeline.py
(+928 files in other folders)
